2003-04-20  Sam Steingold  <sds@gnu.org>

	* m4/rusage.m4 (CL_RUSAGE): use time(2) instead of a constant
	loop: the Moore's law has caught up with this constant already
	* m4/rlimit.m4 (CL_RLIMIT): check getrlimit() too

2003-04-20  Sam Steingold  <sds@gnu.org>

	* package.d (make_present): if symbol is homeless, set its home
	this takes care of the Issue 194
	* clos.lisp (setf find-class): allow nil as the new-value
	this takes care of the Issue 304

2003-04-19  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): when loading clisprc, use MAKE-PATHNAME
	:DEFAULTS instead of MAKE-PATHNAME + MERGE-PATHNAMES

2003-04-19  Sam Steingold  <sds@gnu.org>

	* defmacro.lisp (kwd-arg-form): new function
	(analyze-key): use it, this fixes the 2003-03-25 patch which
	treated NIL keyword arguments as unsupplied

2003-04-18  Sam Steingold  <sds@gnu.org>

	* condition.lisp (expand-restart-case): associate when ERROR-OF-TYPE
	this takes care of the item (6) in Issue 76
	(break): bind *DEBUGGER-HOOK* to NIL
	this takes care of the Issue 91
	* clos.lisp (DOCUMENTATION): accept STRUCTURE-OBJECTs and
	STANDARD-OBJECTs - this takes care of the Issue 135
	* compiler.lisp (compile-file): accept :EXTERNAL-FORMAT argument,
	as per Issue 155

2003-04-18  Sam Steingold  <sds@gnu.org>

	* stream.d (broadcast_stream_last): new function
	(BUILT-IN-STREAM-ELEMENT-TYPE): fixed a crash with SYNONYM-STREAM
	pointing to a non-built-in stream;
	handle BROADCAST-STREAM as per Issue 21
	(STREAM-EXTERNAL-FORMAT): ditto

2003-04-16  Sam Steingold  <sds@gnu.org>

	* loadform.lisp (mlf-unquote): removed
	(mlf-init-function): use SUBLIS instead of MLF-UNQUOTE
	Reported by Christophe Rhodes <csr21@cam.ac.uk>

2003-04-18  Sam Steingold  <sds@gnu.org>

	* backquote.lisp (eval-self-p): T evaluates to itself too
	(maybe-unquote): new function - the dual for MAYBE-QUOTE
	(bq-optimize-append): avoid consing up BUTLAST twice;
	do not destructively modify input lists (suggested by Kaz)