@@ -3,6 +3,8 @@
 	* m4/rusage.m4 (CL_RUSAGE): use time(2) instead of a constant
 	loop: the Moore's law has caught up with this constant already
 	* m4/rlimit.m4 (CL_RLIMIT): check getrlimit() too
+	* posixmisc.d (RESOURCE-USAGE-LIMITS-INTERNAL): respect
+	HAVE_SYS_RESOURCE_H, HAVE_GETRUSAGE and HAVE_GETRLIMIT
 
 2003-04-20  Sam Steingold  <sds@gnu.org>
 
